--- a/hash-generator.old.html
+++ b/hash-generator.old.html
@@ -5,21 +5,21 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Free Online Hash Generator & Encoders (MD5, SHA-256, HMAC, Base64) | SureWhyNot</title>
-  <meta name="description" content="Free online hash generator and encoders. Generate MD5, SHA-1, SHA-256, SHA-384, SHA-512, and HMAC-SHA256 plus Base64/URL/Hex/HTML/ROT13 locally in your browser." />
+  <title>Hash Generator & Encoders — MD5, SHA-1, SHA-256, SHA-512, Base64, URL Encode (Free)</title>
+  <meta name="description" content="Free hash generator and encoder/decoder tools. Generate MD5, SHA-1, SHA-256, SHA-384, SHA-512, HMAC-SHA256. Base64 encode/decode, URL encode/decode, Hex, HTML entities, ROT13, and JWT decode. Runs locally in your browser — no uploads." />
   <meta name="robots" content="index,follow,max-image-preview:large,max-snippet:-1,max-video-preview:-1" />
   <link rel="canonical" href="https://surewhynot.app/hash-generator">
 
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="SureWhyNot">
   <meta property="og:locale" content="en_US">
-  <meta property="og:title" content="Free Online Hash Generator & Encoders | SureWhyNot">
-  <meta property="og:description" content="Free online hash generator for MD5/SHA hashes and HMAC plus Base64/URL/Hex/HTML encoders — runs locally in your browser.">
+  <meta property="og:title" content="Hash Generator & Encoders (Free, Client-Side)">
+  <meta property="og:description" content="MD5/SHA hashes, HMAC, Base64, URL/Hex/HTML encoders, ROT13, JWT decode — runs in your browser.">
   <meta property="og:url" content="https://surewhynot.app/hash-generator">
 
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:title" content="Free Online Hash Generator & Encoders | SureWhyNot">
-  <meta name="twitter:description" content="Free online hash generator for MD5/SHA hashes and HMAC plus Base64/URL/Hex/HTML encoders — runs locally in your browser.">
+  <meta name="twitter:title" content="Hash Generator & Encoders (Free, Client-Side)">
+  <meta name="twitter:description" content="MD5/SHA hashes, HMAC, Base64, URL/Hex/HTML encoders, ROT13, JWT decode — runs in your browser.">
 
   <link rel="stylesheet" href="/assets/site.css">
 
@@ -108,7 +108,7 @@
 
           <div class="card">
             <div class="pad">
-              <div class="h1">Free Online Hash Generator &amp; Encoders</div>
+              <div class="h1">Hash Generator &amp; Encoders</div>
 
               <div class="muted" style="margin-top:10px">
                 Generate hashes and run common encoders/decoders locally. No uploads.
@@ -211,70 +211,6 @@
             </div>
           </div>
 
-        </section>
-
-
-        <section class="card">
-          <div class="pad">
-            <div class="h1">Generate Hashes and Encode/Decode Safely (Local-Only)</div>
-
-            <div class="muted" style="margin-top:10px">
-              This free online hash generator produces common digests and encodings directly in your browser. Use it to generate
-              MD5, SHA-1, SHA-256, SHA-384, SHA-512, and HMAC-SHA256, plus Base64 and URL/Hex/HTML/ROT13 transforms.
-              Everything runs client-side — no uploads and no server-side processing.
-            </div>
-
-            <div class="hr"></div>
-
-            <div class="h2">Common Use Cases</div>
-            <ul class="list" style="margin-top:8px">
-              <li>Create checksums to compare two payloads or verify a download</li>
-              <li>Generate SHA-256 digests for API signing workflows and integrity checks</li>
-              <li>Produce HMAC-SHA256 signatures for request authentication (shared-secret schemes)</li>
-              <li>Base64 encode/decode tokens, headers, or binary blobs represented as text</li>
-              <li>URL encode/decode query strings and safely inspect encoded values</li>
-            </ul>
-
-            <div class="hr"></div>
-
-            <div class="h2">How It Works</div>
-            <div class="muted" style="margin-top:8px">
-              Input text is converted to bytes in your browser, then hashed using standard digest algorithms. Where supported,
-              modern browsers use the Web Crypto APIs for consistent results. Encoders/decoders perform deterministic transforms
-              (Base64, URL, Hex, HTML entities, ROT13) so you can round-trip values and confirm outputs without sending data anywhere.
-            </div>
-
-            <div class="hr"></div>
-
-            <div class="h2">Features</div>
-            <ul class="list" style="margin-top:8px">
-              <li>MD5, SHA-1, SHA-256, SHA-384, SHA-512 hashing</li>
-              <li>HMAC-SHA256 generation</li>
-              <li>Base64, URL, Hex, HTML entity transforms, ROT13</li>
-              <li>Local-first processing (no uploads)</li>
-              <li>Copy-friendly outputs for tickets and runbooks</li>
-            </ul>
-
-            <div class="hr"></div>
-
-            <div class="h2">Frequently Asked Questions</div>
-
-            <div class="qa" style="margin-top:10px">
-              <div class="h3">Does this tool upload my input or store it?</div>
-              <div class="muted" style="margin-top:6px">No. Hashing and encoding run locally in your browser and are not persisted by the tool.</div>
-            </div>
-
-            <div class="qa" style="margin-top:10px">
-              <div class="h3">Why do my hashes differ from another site?</div>
-              <div class="muted" style="margin-top:6px">Differences usually come from hidden whitespace, newline style (LF vs CRLF), or text encoding. Try trimming or normalizing input before comparing.</div>
-            </div>
-
-            <div class="qa" style="margin-top:10px">
-              <div class="h3">Can I hash files instead of text?</div>
-              <div class="muted" style="margin-top:6px">This page is optimized for text and clipboard workflows. If you need file hashing, add a file picker and stream the file bytes through the same digest functions.</div>
-            </div>
-
-          </div>
         </section>
       </div>
     </main>
