--- a/uuid-generator.old.html
+++ b/uuid-generator.old.html
@@ -5,12 +5,12 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Free Online UUID Generator (v4, v5, v7) + Validator — Bulk, Search, Export | SureWhyNot</title>
+  <title>UUID Generator (v4, v5, v7) + Validator — Bulk, Search, Export (Free)</title>
   <meta name="description" content="Free UUID generator and validator. Generate UUID v4 (random), v5 (namespace+name), and v7 (time-ordered). Bulk generate, search, sort, copy, and export TXT/CSV. Runs locally in your browser — no uploads." />
   <link rel="canonical" href="https://surewhynot.app/uuid-generator">
 
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Free Online UUID Generator + Validator (v4/v5/v7) | SureWhyNot" />
+  <meta property="og:title" content="UUID Generator + Validator (Free, Client-Side)">
   <meta property="og:description" content="UUID v4/v5/v7 generator with bulk, search, sort, copy, and export. Runs locally — no uploads.">
   <meta property="og:url" content="https://surewhynot.app/uuid-generator">
 
@@ -105,7 +105,7 @@ tbody#rows .actions .pill {
             <div class="pad">
 
               <!-- SEO headings (same look as your existing .h1 + .muted blocks) -->
-              <h1 class="h1" style="margin:0; font-size:inherit; font-weight:inherit;">Free Online UUID Generator + Validator</h1>
+              <h1 class="h1" style="margin:0; font-size:inherit; font-weight:inherit;">UUID Generator + Validator</h1>
               <h2 class="muted" style="margin:10px 0 0 0; font-size:inherit; font-weight:normal;">
                 Generate UUIDs locally: v4 (random), v5 (namespace+name), v7 (time-ordered). Bulk generate, search, sort, copy, and export.
               </h2>
@@ -208,45 +208,6 @@ tbody#rows .actions .pill {
           </div>
 
         </section>
-
-
-        <!-- SEO content (full-width, outside the grid) -->
-        <section class="card">
-          <div class="pad">
-
-            <h2 style="margin-top:0;">Generate and Validate UUIDs Locally</h2>
-            <p>
-              This free online UUID generator helps you create and validate UUIDs (v4, v5, and v7) directly in your browser. Use it to bulk-generate identifiers, verify format, and export results without sending data to a server. It’s built for developers who need fast, predictable UUIDs for databases, APIs, logs, tests, and distributed systems.
-            </p>
-
-            <h3>Common Use Cases</h3>
-            <ul>
-              <li>Generate UUID v4 values for primary keys, request IDs, and correlation IDs</li>
-              <li>Create time-ordered UUID v7 identifiers for better index locality and sorting</li>
-              <li>Produce deterministic UUID v5 values from a namespace + name</li>
-              <li>Validate UUIDs from logs, payloads, or user input before storing</li>
-              <li>Bulk-generate IDs for fixtures, test data, migrations, or seed scripts</li>
-            </ul>
-
-            <h3>How It Works</h3>
-            <p>
-              Generation happens client-side in your browser. For v4, the tool uses secure randomness (when available) to produce RFC-style UUIDs. For v5, it derives a deterministic UUID from a namespace UUID and a name string so the same input produces the same output. For v7, it creates time-ordered UUIDs that sort roughly by creation time. The validator checks structure and version/variant fields so you can quickly confirm an ID is well-formed.
-            </p>
-
-            <h3>Frequently Asked Questions</h3>
-
-            <h4>Does this UUID generator upload my data?</h4>
-            <p>No. Generation and validation run locally in your browser.</p>
-
-            <h4>Which UUID version should I use?</h4>
-            <p>Use v4 for general random IDs, v5 for deterministic IDs based on inputs, and v7 when you want time-ordered UUIDs that sort better in databases.</p>
-
-            <h4>Can I bulk-generate and export UUIDs?</h4>
-            <p>Yes. Generate multiple UUIDs, search/sort the list, then copy or export to TXT/CSV for use in scripts or datasets.</p>
-
-          </div>
-        </section>
-
       </div>
     </main>
 
