lop exp seo update

--- a/log-explorer.old.html
+++ b/log-explorer.old.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Free Online Log Explorer — Parse, Search, Filter, Aggregate & Export Logs | SureWhyNot</title>
+  <title>Log Explorer — Parse, Search, Filter, Aggregate & Export Logs (Free)</title>
   <meta name="description" content="Free client-side log explorer to parse .log/.txt/NDJSON, search (AND/OR, field:value), filter by time/level, aggregate counts, and export JSON/CSV. Runs locally in your browser — no uploads." />
   <link rel="canonical" href="https://surewhynot.app/log-explorer" />
   <meta name="robots" content="index,follow" />
@@ -14,13 +14,13 @@
   <!-- Open Graph -->
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="surewhynot.app" />
-  <meta property="og:title" content="Free Online Log Explorer — Parse, Search, Filter, Aggregate & Export Logs | SureWhyNot" />
+  <meta property="og:title" content="Log Explorer — Parse, Search, Filter, Aggregate & Export Logs (Free)" />
   <meta property="og:description" content="Parse logs/NDJSON locally. Search, filter, aggregate, export JSON/CSV. No uploads." />
   <meta property="og:url" content="https://surewhynot.app/log-explorer" />
 
   <!-- Twitter / X -->
   <meta name="twitter:card" content="summary" />
-  <meta name="twitter:title" content="Free Online Log Explorer — Parse, Search, Filter, Aggregate & Export Logs | SureWhyNot" />
+  <meta name="twitter:title" content="Log Explorer — Parse, Search, Filter, Aggregate & Export Logs (Free)" />
   <meta name="twitter:description" content="Parse logs/NDJSON locally. Search, filter, aggregate, export JSON/CSV. No uploads." />
 
   <!-- Optional: Helpful for SERP display on some platforms -->
@@ -154,7 +154,7 @@
           <!-- LEFT: INPUT -->
           <section class="card">
             <div class="pad">
-              <div class="h1">Free Online Log Explorer</div>
+              <div class="h1">Log Explorer</div>
               <div class="muted">
                 Local-only. Paste logs or drop a file. Parse → search → filter → aggregate → export.
               </div>
@@ -279,50 +279,6 @@
             </div>
           </aside>
         </div>
-
-
-        <!-- SEO content (full-width, outside the grid) -->
-        <section class="card">
-          <div class="pad">
-
-            <h2 style="margin-top:0;">Free Online Log Explorer (Local-Only)</h2>
-            <p>
-              This free online log explorer lets you parse, search, filter, and aggregate logs directly in your browser. Paste text or drop
-              <span class="kbd">.log</span>/<span class="kbd">.txt</span>/<span class="kbd">.ndjson</span> files to inspect events fast without uploading data to a server.
-              It’s built for debugging production incidents, analyzing application output, and exploring structured or semi-structured logs with simple query syntax.
-            </p>
-
-            <h3>Common Use Cases</h3>
-            <ul>
-              <li>Search logs with text queries, <span class="kbd">field:value</span>, and AND/OR conditions</li>
-              <li>Filter events by time range and severity (error/warn/info/debug)</li>
-              <li>Review NDJSON / JSON lines from services, proxies, and cloud platforms</li>
-              <li>Aggregate counts by level and spot spikes with per-minute buckets</li>
-              <li>Export filtered results to JSON or CSV for tickets, reports, or follow-up analysis</li>
-            </ul>
-
-            <h3>How It Works</h3>
-            <p>
-              Parsing and filtering run client-side. The tool streams file reads, tokenizes common formats (NDJSON, key=value, syslog-ish),
-              and normalizes fields like <span class="kbd">time</span>, <span class="kbd">level</span>, <span class="kbd">source</span>, and <span class="kbd">message</span>.
-              Queries support free text plus simple field matching. Results are sorted with recent events first, and aggregates (counts + buckets)
-              are computed from the filtered set. Because everything executes in your browser, your log data stays on your machine.
-            </p>
-
-            <h3>Frequently Asked Questions</h3>
-
-            <h4>Does this tool upload my logs anywhere?</h4>
-            <p>No. Parsing, searching, and exporting all happen locally in your browser.</p>
-
-            <h4>What formats does it support?</h4>
-            <p>It parses NDJSON/JSON lines, key=value logs, and common “syslog-like” lines, and still lets you search raw text when fields aren’t present.</p>
-
-            <h4>How do I search specific fields?</h4>
-            <p>Use <span class="kbd">field:value</span> terms (for example <span class="kbd">level:error</span> or <span class="kbd">source:nginx</span>) combined with AND/OR.</p>
-
-          </div>
-        </section>
-
       </div>
     </main>
 
