--- a/json-to-typescript.older.html
+++ b/json-to-typescript.older.html
@@ -6,12 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <title>Free Online JSON to TypeScript Converter | SureWhyNot</title>
-  <meta name="description" content="Free JSON to TypeScript generator. Paste JSON and instantly generate TypeScript interfaces or type aliases. Runs locally in your browser — no uploads." />
+  <meta name="description" content="Free online JSON to TypeScript converter. Paste JSON and instantly generate TypeScript interfaces or type aliases. Runs locally in your browser — no uploads." />
   <meta name="robots" content="index,follow" />
   <link rel="canonical" href="https://surewhynot.app/json-to-typescript" />
 
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Free Online JSON to TypeScript Converter | SureWhyNot">
+  <meta property="og:title" content="Free Online JSON to TypeScript Converter">
   <meta property="og:description" content="Paste JSON and generate TypeScript interfaces/types instantly. Runs locally in your browser — no uploads.">
   <meta property="og:url" content="https://surewhynot.app/json-to-typescript">
   <meta property="og:site_name" content="SureWhyNot">
@@ -81,9 +81,9 @@
             <div class="pad">
 
               <!-- Proper semantic headings, styled to match your site (no layout/style change) -->
-              <h1 class="h1" style="margin:0;">JSON to TypeScript Interface Generator</h1>
+              <h1 class="h1" style="margin:0;">Free Online JSON to TypeScript Converter</h1>
               <h2 class="muted" style="margin:2px 0 0 0;font-size:12px;font-weight:normal;">
-                Generate TypeScript interfaces or type aliases from JSON (local, no uploads)
+                Generate TypeScript interfaces or type aliases from JSON (free, online, local, no uploads)
               </h2>
 
               <div class="muted" style="margin-top:10px">
@@ -183,57 +183,58 @@
             </div>
           </div>
 
+        
+</section>
+
+        <section class="card">
+          <div class="pad">
+            <div class="h1">Convert JSON to TypeScript Interfaces Instantly</div>
+
+            <div class="muted" style="margin-top:10px">
+              This free online JSON to TypeScript converter generates clean TypeScript interfaces directly from structured JSON data. Everything runs locally in your browser with no uploads and no server processing. It’s built for developers who need fast, accurate type definitions for real-world API responses, configs, and payloads.
+            </div>
+
+            <div class="hr"></div>
+
+            <div class="h1" style="font-size:16px">Common Use Cases</div>
+            <ul class="muted" style="margin-top:8px;line-height:1.6">
+              <li>Generate TypeScript interfaces from API responses</li>
+              <li>Create typed models for React, Angular, or Node projects</li>
+              <li>Turn backend JSON payloads into frontend-safe type definitions</li>
+              <li>Sanity-check object structure before implementation</li>
+              <li>Speed up schema modeling during prototyping</li>
+            </ul>
+
+            <div class="hr"></div>
+
+            <div class="h1" style="font-size:16px">How It Works</div>
+            <div class="muted" style="margin-top:8px">
+              The tool parses valid JSON and infers TypeScript types from values: primitives map to string/number/boolean, nested objects become nested interfaces, and arrays are typed based on detected structure. Because it runs entirely in your browser, your JSON never leaves your device.
+            </div>
+
+            <div class="hr"></div>
+
+            <div class="h1" style="font-size:16px">Frequently Asked Questions</div>
+
+            <div class="muted" style="margin-top:10px">
+              <strong>Does this JSON to TypeScript tool send data to a server?</strong><br>
+              No. All parsing and interface generation happens locally in your browser.
+            </div>
+
+            <div class="muted" style="margin-top:10px">
+              <strong>Can it handle nested or complex JSON structures?</strong><br>
+              Yes. Nested objects and arrays are converted into properly typed interfaces/types.
+            </div>
+
+            <div class="muted" style="margin-top:10px">
+              <strong>What if my JSON is invalid?</strong><br>
+              The generator requires valid JSON. Fix the syntax and run Generate again.
+            </div>
+          </div>
         </section>
+
       </div>
     </main>
-
-    <section style="padding:0 0 26px;">
-      <div class="card">
-        <div class="pad">
-          <div class="h1">About this tool</div>
-
-          <div class="muted">
-            Convert raw JSON into clean TypeScript interfaces or type aliases instantly. This free online JSON to TypeScript generator runs entirely in your browser — no uploads and no server-side processing. It’s built for frontend developers and API consumers who want fast, accurate typings for real-world responses, configs, and payloads.
-          </div>
-
-          <div class="hr"></div>
-
-          <div class="h2">Common use cases</div>
-          <ul class="muted" style="margin:8px 0 0 18px; padding:0;">
-            <li>Generate TypeScript interfaces from API responses</li>
-            <li>Create typed models for React, Angular, or Node projects</li>
-            <li>Turn backend JSON payloads into frontend-safe type definitions</li>
-            <li>Sanity-check object shape before implementation</li>
-            <li>Speed up schema modeling during prototyping</li>
-          </ul>
-
-          <div class="hr"></div>
-
-          <div class="h2">How it works</div>
-          <div class="muted">
-            The generator parses valid JSON and infers TypeScript types from values: primitives map to string/number/boolean, nested objects become nested interfaces/types, and arrays are typed based on detected structure. Because it runs locally in your browser, your JSON never leaves your device.
-          </div>
-
-          <div class="hr"></div>
-
-          <div class="h2">FAQ</div>
-
-          <div class="muted" style="margin-top:8px"><strong>Does this send JSON to a server?</strong><br>
-            No — parsing and type generation run locally in your browser.
-          </div>
-
-          <div class="muted" style="margin-top:10px"><strong>Can it handle nested or complex JSON?</strong><br>
-            Yes. Nested objects and arrays are converted into properly typed interfaces/types.
-          </div>
-
-          <div class="muted" style="margin-top:10px"><strong>What if my JSON is invalid?</strong><br>
-            The generator requires valid JSON. Fix the syntax and run Generate again.
-          </div>
-        </div>
-      </div>
-    </section>
-
-
 
     <div id="site-footer"></div>
 
